@@ -19,5 +19,8 @@ AM_CPPFLAGS += -I$(top_builddir)/src -I$(top_srcdir)/src
 # ...then search in distributed headers.
 AM_CPPFLAGS += -I$(top_srcdir)/include
 
+# Add ltdl include dir.
+AM_CPPFLAGS += $(INCLTDL)
+
 # Add boost include dir
 AM_CPPFLAGS += $(BOOST_CPPFLAGS)
