@@ -1,8 +1,5 @@
 include $(top_srcdir)/build-aux/init.mk
 
-# Add ltdl include dir.
-AM_CPPFLAGS += $(INCLTDL)
-
 # Add available warnings flags.
 AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
